kube/member-web-ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: member-web-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - member.bchd.cash
    secretName: member-web-tls
  backend:
    serviceName: member-web
    servicePort: 96
  rules:
  - host: member.bchd.cash
    http:
      paths:
      - path: /
        backend:
          serviceName: member-web
          servicePort: 96
